fix: code wrap

--- a/scss/remarkability.scss
+++ b/scss/remarkability.scss
@@ -357,10 +357,6 @@
     pre {
       white-space: pre-wrap;
     }
-
-    code {
-      white-space: pre;
-    }
   }
 
   th,
